--- a/assets/styles/blocks/video-container/video-container.scss
+++ b/assets/styles/blocks/video-container/video-container.scss
@@ -1,11 +1,10 @@
 @import "../../common/variables";
 
 .video-container {
-  margin-top : -$headerHeight;
-  position   : relative;
-  width      : 100%;
-  height     : 500px;
-  overflow   : hidden;
+  position : relative;
+  width    : 100%;
+  height   : 500px;
+  overflow : hidden;
 }
 
 .video-container__inner {
