--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -40,7 +40,3 @@ ul {
   padding    : 0;
   list-style : none;
 }
-
-.main-content {
-  padding-top : $headerHeight;
-}
